# Sparty-Gnome

./: GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
Data/Levels/: level0.xml  level3.xml
GameLib/: CMakeLists.txt  Door.cpp  Door.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemBackground.cpp  ItemBackground.h  ItemVisitor.cpp  ItemVisitor.h  MainFrame.cpp  MainFrame.h  Money.cpp  Money.h  ObstacleVisitor.cpp  ObstacleVisitor.h  Picture.cpp  Picture.h  Platform.cpp  Platform.h  RareCandy.cpp  RareCandy.h  Scoreboard.cpp  Scoreboard.h  SpartyGnome.cpp  SpartyGnome.h  Timer.cpp  Timer.h  TuitionUp.cpp  TuitionUp.h  Villain.cpp  Villain.h  Wall.cpp  Wall.h  ids.h  (+1 more)
Tests/: CMakeLists.txt  GameLevelTest.cpp  ItemTest.cpp  ItemVisitorTest.cpp  PictureTest.cpp  RareCandyTest.cpp  TuitionUpTest.cpp  WallTest.cpp  gtest_main.cpp
